deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-frontend
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-1
  rules:
  - host: 'coursa.ai'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lms-frontend
            port:
              number: 80
  - host: 'www.coursa.ai'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lms-frontend
            port:
              number: 80
  tls:
  - hosts:
    - 'coursa.ai'
    - '*.coursa.ai'
    secretName: letsencrypt-coursa-ai-certificate
